@@ -40,3 +40,7 @@ def test_parse_option_symbol():
 def test_parse_option_cusip():
     for _, cusip, opt in _TESTDATA:
         assert opt == options.ParseOptionCusip(cusip)
+
+def test_make_option_symbol():
+    for symbol, _, opt in _TESTDATA:
+        assert options.MakeOptionSymbol(opt) == symbol
